name:                wai-metrics
version:             0.2.0
synopsis:            A WAI middleware to collect EKG request metrics
description:         This WAI middleware counts the number of requests and the number of server errors (http status from 500 to 600).

                     It can be added to any WAI-based webserver, such as Yesod, Scotty, Spock and Servant.

                     The counters are EKG Counters from ekg-core. <https://ocharles.org.uk/blog/posts/2012-12-11-24-day-of-hackage-ekg.html>
license:             BSD3
license-file:        LICENSE
author:              Sebastian de Bellefon
maintainer:          arnaudpourseb@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10
Tested-with:         GHC == 7.6.2, GHC == 7.6.3, GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2

library
  exposed-modules:     Network.Wai.Metrics
  build-depends:       base >=4.6 && < 4.9
                     , wai >= 3.0.0 && < 3.1
                     , ekg-core >= 0.1 && < 0.2
                     , http-types >= 0.8 && < 0.9
                     , time >= 1.4 && < 1.6
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall

executable wai-metrics-scotty-demo
  build-depends:       base >=4.6 && < 4.9
                     , wai-metrics
                     , ekg-core >= 0.1 && < 0.2
                     , ekg >= 0.4 && < 0.5
                     , transformers >= 0.3 && < 0.5
                     , wai >= 3.0 && < 3.1
                     , scotty >= 0.8 && < 0.11
                     , http-types >= 0.8 && < 0.9
                     , time >= 1.4 && < 1.6
  main-is:             wai-metrics-scotty-demo.hs
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall -with-rtsopts=-T

test-suite unit
  build-depends:       base >=4.6 && < 4.9
                     , wai >= 3.0 && < 3.1
                     , ekg-core >= 0.1 && < 0.2
                     , wai-metrics
                     , tasty >= 0.10.1 && < 0.11
                     , tasty-hunit >= 0.8 && < 0.10
                     , tasty-quickcheck >= 0.8.2 && < 0.9
                     , QuickCheck == 2.7 && < 2.9
                     , scotty >= 0.8.0 && < 0.11
                     , transformers >= 0.3 && < 0.5
                     , bytestring == 0.10.0.2 && < 0.11
                     , wai-extra >= 3.0.0 && < 3.1
                     , http-types >= 0.8 && < 0.9
                     , time >= 1.4 && < 1.6
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/Helkafen/wai-metrics.git
