name:                wai-metrics-examples
version:             0.2.0
synopsis:            Example programs for wai-metrics
description:         Example programs illustrating how to insert the middleware in some web servers.
license:             BSD3
license-file:        LICENSE
author:              Sebastian de Bellefon
maintainer:          arnaudpourseb@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable wai-metrics-scotty-demo
  build-depends:       base >=4.6 && < 4.9
                     , wai-metrics
                     , ekg-core
                     , ekg
                     , transformers
                     , wai
                     , scotty
                     , http-types
                     , time
  main-is:             wai-metrics-scotty-demo.hs
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall -with-rtsopts=-T
