name:                wai-middleware-metrics-examples
version:             0.2.0
synopsis:            Example programs for wai-middleware-metrics
description:         Example programs illustrating how to insert the middleware in some web servers.
license:             BSD3
author:              Sebastian de Bellefon
maintainer:          arnaudpourseb@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable wai-middleware-metrics-scotty-demo
  build-depends:       base >=4.6 && < 5
                     , wai-middleware-metrics
                     , ekg-core
                     , ekg
                     , transformers
                     , wai
                     , scotty
                     , http-types
                     , time
  main-is:             wai-middleware-metrics-scotty-demo.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -with-rtsopts=-T
